first pass at adding all features required by Acceptance Criteria done by best guess or by adding comments for things to be added later

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Blog</title>
-</head>
-<body>
-    {{#each posts as |post|}}
-      <a href="./{{post.id}}"><h1>{{post.title}}</h1></a>
-      <h3>Posted by {{post.user.username}} on {{post.created_at}}</h3>
-      <p>{{post.content}} </p>
-
-      {{#each comments as |comment|}}
-      <p>{{comment.content}} - {{comments.user.username}}</p>
-      {{/each}}
-    {{/each}}
-</body>
-</html>
+{{#if posts.length}}
+{{#each posts as |post|}}
+  <a href="./post/{{post.id}}"><h1>{{post.title}}</h1></a>
+  <h3>Posted by {{post.user.username}} on {{format_date post.date_created}}</h3>
+  {{!-- <p>{{post.content}} </p> --}}
+{{/each}}
+{{else}}
+<h3>No posts to show yet!</h3>
+{{/if}}
