tweaks to individual post page

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,7 +1,8 @@
 <h1>{{post.title}}</h1>
-<h3>Posted by {{post.user.username}} on {{format_date post.date_created}}</h3>
+<h4>Posted by {{post.user.username}} on {{format_date post.date_created}}</h4>
 <p>{{post.content}} </p>
 
+<h4>Comments:</h4>
 {{#each post.comments as |comment|}}
 <p>{{comment.content}} - <i>{{comment.user.username}}</i></p>
 {{/each}}
