--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,21 +1,21 @@
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome, {{user.name}}!</h2>
+    <h2>Welcome, {{format_name user.name}}!</h2>
   </div>
 </div>
 
 <div class="row mt-4">
-  {{#if posts.length}}
+  {{#if user.posts.length}}
   <div class="col-md-6 post-list">
     <h3>Current posts:</h3>
 
     {{#each user.posts as |post|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/{{post.id}}">{{post.name}}</a></h4>
+        <h4><a href="/post/{{post.id}}">{{post.title}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" id="{{post.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
