--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -15,7 +15,7 @@
         <h4><a href="/post/{{post.id}}">{{post.title}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" id="{{post.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger postRemove" id="{{post.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
@@ -31,8 +31,8 @@
         <input class="form-input" type="text" id="title" name="title" />
       </div>
       <div class="form-group">
-        <label for="contents">Content:</label>
-        <textarea class="form-input" id="contents" name="contents"></textarea>
+        <label for="content">Content:</label>
+        <textarea class="form-input" id="content" name="content"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Post</button>
