--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -4,13 +4,21 @@
 
 <h4>Comments:</h4>
 {{#each post.comments as |comment|}}
-<p>{{comment.content}} - <i>{{comment.user.username}}</i></p>
+<div class="row mb-2">
+  <div class="col-md-8">
+    <p>{{comment.content}} - <i>{{comment.user.username}}</i></p>
+  </div>
+  <div class="col-md-4">
+    <button class="btn btn-sm btn-outline-secondary commentUpdate {{!--display-none--}}" id="{{comment.id}}">UPDATE</button>
+    <button class="btn btn-sm btn-outline-danger commentRemove {{!--display-none--}}" id="{{comment.id}}">DELETE</button>
+  </div>
+</div>
 {{/each}}
 {{#if logged_in}}
-<div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Leave a comment..." aria-label="commentBox" aria-describedby="basic-addon2" id="content">
-  <div class="input-group-append">
-    <button class="btn btn-outline-primary" type="button" data-id="{{post.id}}">Post</button>
+<div class="input-group mb-3 row">
+  <input type="text" class="form-control col-md-9" placeholder="Leave a comment..." aria-label="commentBox" aria-describedby="basic-addon2" id="content">
+  <div class="input-group-append col-md-3">
+    <button id="newComment" class="btn btn-outline-primary" type="button" data-id="{{post.id}}">Post</button>
   </div>
 </div>
 {{/if}}
